<resources>
    <string name="app_name">Smart Dacha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Логин</string>
    <string name="enter_your_password">Пароль</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="invalid_login">Введите логин</string>
    <string name="invalid_pass">Введите пароль</string>
    <string name="sign_up_to_continue">Зарегестрируйтесь, чтобы продолжить</string>
    <string name="login">Войти</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_login">Логин</string>
    <string name="smart_dacha">SMART DACHA</string>
    <string name="c">°C</string>
    <string name="heating_control_tv">Управление системой отопления</string>
    <string name="tv_set_temperature">Установите требуемую температуру</string>
</resources>